# dqn-uav

./: .gitignore  .pylintrc  Makefile  Python Code  README.md  TestRLModels.py  mypy.ini  pyproject.toml  pytest.ini  spec.txt  transfer_data.py
History/LiDAR_RL_020820220042/: info.txt  loss.csv  positions.csv  result.csv  spec.csv
Python Code/: OtherFunc.py  ProcessResult.py  TrainRLAgent.py
UAV_Environment_Unity/: Assembly-CSharp.csproj  UAV_Environment_Unity.sln  UnityUAVObsatcleAvoidance.sln
UAV_Environment_Unity/Assets/: New Material.mat
UAV_Environment_Unity/ProjectSettings/: AudioManager.asset  ClusterInputManager.asset  DynamicsManager.asset  EditorBuildSettings.asset  EditorSettings.asset  GraphicsSettings.asset  InputManager.asset  NavMeshAreas.asset  Physics2DSettings.asset  PresetManager.asset  QualitySettings.asset  TagManager.asset  TimeManager.asset  UnityConnectSettings.asset  VFXManager.asset
UAV_Environment_Unity/Temp/: UnityTempFile-0c51c04632c394329b337e3ffda6185b  UnityTempFile-0cdde2a494e924ed9af3ff29f63066ba  UnityTempFile-0e6eb3295c40a4472b781d69816bef85  UnityTempFile-111dc1c917a7d4a8194bcda89c9fe850  UnityTempFile-817ba04e1856240ddbe6f9c3903a3e13  UnityTempFile-87cc7c1d3dfe24ddca18d5ea1cef51c4  UnityTempFile-a3cddf579d7354af3b639a5610a27a31  UnityTempFile-a5fcd363605664e608202d4d5d29423c  UnityTempFile-a6771c914eaef41e4b607091683f46e4  (+3 more)
src/: DQL.py  OtherFunc.py  TestRLModels.py  TrainRLAgent.py  agent.py  communicator.py  config.yaml  controller.py  evaluate.py  recorder.py  train.py  transfer_data.py
tests/: test.py
(+33 files in other folders)
